--- a/Develop/package.json
+++ b/Develop/package.json
@@ -13,21 +13,26 @@
     "client:dev": "cd client && npm run dev",
     "build": "cd server && npm run build",
     "seed": "cd server && npm run seed",
-    "render-build": "npm install && npm run build"
+    "render-build": "npm install && npm run build",
+    "test": "npm run test:component && npm run test:e2e",
+    "test:component": "cypress run --component",
+    "test:e2e": "cypress run --e2e"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^18.3.3",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^8.2.2",
     "cypress": "^13.17.0",
+    "jsdom": "^26.0.0",
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "typescript": "^5.5.3",
+    "vite": "^5.4.11",
     "vitest": "^2.0.3",
     "wait-on": "^7.2.0"
   }
